Soft and Linear Light blend modes for materials, textures, nodes, etc. Bug fix included for Darken mode #19252

Closed
opened 2009-08-25 19:58:46 +02:00 by Roland Hess · 4 comments

%%%Updated my older patch work for adding Soft and Linear light blending modes to 2.5 base. Soft Light blending is brilliant for color grading in the compositor. Linear Light blending is necessary for doing a high pass filter.

I've also fixed a bug in the implementation of Darken mode. Previously, using darken mode at different percentages produced results that tended toward black instead of an unprocessed base value, as the percentage was not as a blending factor, but just to the incoming secondary value which always become black (0,0,0) at 0% blend. This behavior is now fixed.%%%

%%%Updated my older patch work for adding Soft and Linear light blending modes to 2.5 base. Soft Light blending is brilliant for color grading in the compositor. Linear Light blending is necessary for doing a high pass filter. I've also fixed a bug in the implementation of Darken mode. Previously, using darken mode at different percentages produced results that tended toward black instead of an unprocessed base value, as the percentage was not as a blending factor, but just to the incoming secondary value which always become black (0,0,0) at 0% blend. This behavior is now fixed.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Assigning to Bob for review%%%

%%%Assigning to Bob for review%%%
Member

%%%Looked good. Committing.%%%

%%%Looked good. Committing.%%%
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#19252
No description provided.