committing patch #19252-Soft/Linear Light blend modes+Darken mode bug fix