source/blender/blenkernel/intern/material.c
@@ -1031,15 +1031,15 @@ void ramp_blend(int type, float *r, float *g, float *b, float fac, float *col)
 			}
 				break;
 		case MA_RAMP_DARK:
-			tmp= fac*col[0];
-			if(tmp < *r) *r= tmp; 
-				if(g) {
-					tmp= fac*col[1];
-					if(tmp < *g) *g= tmp; 
-					tmp= fac*col[2];
-					if(tmp < *b) *b= tmp; 
-				}
-					break;
+            tmp=col[0]+((1-col[0])*facm); 
+            if(tmp < *r) *r= tmp; 
+            if(g) { 
+                tmp=col[1]+((1-col[1])*facm); 
+                if(tmp < *g) *g= tmp; 
+                tmp=col[2]+((1-col[2])*facm); 
+                if(tmp < *b) *b= tmp; 
+            } 
+                break; 
 		case MA_RAMP_LIGHT:
 			tmp= fac*col[0];
 			if(tmp > *r) *r= tmp; 
@@ -1169,8 +1169,37 @@ void ramp_blend(int type, float *r, float *g, float *b, float fac, float *col)
 				}
 			}
 				break;
-	}
-	
+        case MA_RAMP_SOFT: 
+            if (g){ 
+                float scr, scg, scb; 
+                 
+                /* first calculate non-fac based Screen mix */ 
+                scr = 1.0 - ((1.0 - col[0])) * (1.0 - *r); 
+                scg = 1.0 - ((1.0 - col[1])) * (1.0 - *g); 
+                scb = 1.0 - ((1.0 - col[2])) * (1.0 - *b); 
+                 
+                *r = facm*(*r) + fac*(((1.0 - *r) * col[0] * (*r)) + (*r * scr)); 
+                *g = facm*(*g) + fac*(((1.0 - *g) * col[1] * (*g)) + (*g * scg)); 
+                *b = facm*(*b) + fac*(((1.0 - *b) * col[2] * (*b)) + (*b * scb)); 
+            } 
+                break; 
+        case MA_RAMP_LINEAR: 
+            if (col[0] > 0.5)  
+                *r = *r + fac*(2*(col[0]-0.5)); 
+            else  
+                *r = *r + fac*(2*(col[0]) - 1); 
+            if (g){ 
+                if (col[1] > 0.5)  
+                    *g = *g + fac*(2*(col[1]-0.5)); 
+                else  
+                    *g = *g + fac*(2*(col[1]) -1); 
+                if (col[2] > 0.5)  
+                    *b = *b + fac*(2*(col[2]-0.5)); 
+                else  
+                    *b = *b + fac*(2*(col[2]) - 1); 
+            } 
+                break; 
+	}	
 }
 
 
